--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "workbox-webpack-plugin": "^6.4.1"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "moment": "2.29.1",
     "prop-types": "15.7.2",
